# wdi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  minimal_setup.sh  new.sh
1.001/: makefile
1.001/source/: main.cpp
1.001/src/: main.cpp
1.001/tests/: test_functional.py  test_main.cpp  tests.cpp  tests.py
1.002/source/: main.cpp
1.002/tests/: test_functional.py  test_main.cpp
1.003/source/: main.cpp
1.003/tests/: test_functional.py
1.004/source/: main.cpp
1.004/tests/: test_functional.py
1.005/source/: main.cpp
1.005/tests/: test_functional.py  test_main.cpp
1.006/source/: main.cpp
1.006/tests/: test_functional.py
1.007/source/: main.cpp
1.007/tests/: test_functional.py
1.008/source/: main.cpp
1.009/source/: main.cpp
1.010/source/: main.cpp
1.011/source/: main.cpp
1.012/source/: main.cpp
1.013/source/: main.cpp
1.014/source/: main.cpp
1.015/source/: main.cpp
1.016/source/: main.cpp
1.017/source/: main.cpp
1.018/source/: main.cpp
1.019/source/: main.cpp
1.019/tests/: test_main.cpp
1.020/source/: main.cpp
1.1/: fibonacci.cpp  makefile
1.10/src/: main.cpp
1.10/tests/: tests.py
1.12/src/: main.cpp
1.12/tests/: tests.cpp
1.13/src/: main.cpp
1.14/src/: main.cpp
1.15/src/: main.cpp
1.16/: makefile
1.16/src/: main.cpp
1.17/src/: main.cpp
1.17/tests/: tests.py
1.18/src/: main.cpp
1.2/: fibonacci_reverse.cpp
1.3/: FibonacciGenerator.cpp  FibonacciGenerator.h  main.cpp  makefile
1.3/tests/: tests.py
1.5/: main.cpp  makefile
1.5/tests/: tests.py
1.6/: main.cpp  makefile
1.6/tests/: tests.py
1.7/: main.cpp  makefile  mymath.cpp  mymath.h
1.7/tests/: tests.py
1.8/src/: main.cpp
1.8/tests/: tests.py
1.9/: makefile
1.9/src/: main.cpp
1.9/tests/: tests.cpp
2.001/source/: main.cpp
2.001/tests/: test_functional.py
2.002/source/: main.cpp
2.002/tests/: test_functional.py
2.003/source/: main.cpp
2.003/tests/: test_functional.py
2.004/source/: main.cpp
2.004/tests/: test_functional.py
2.005/source/: main.cpp
2.005/tests/: test_functional.py  test_main.cpp
2.006/source/: main.cpp
2.006/tests/: test_functional.py
2.007/source/: main.cpp
2.008/source/: main.cpp
2.009/source/: main.cpp
2.009/tests/: test_functional.py
2.010/source/: main.cpp
2.011/source/: main.cpp
2.011/tests/: test_main.cpp
2.012/source/: main.cpp
2.013/source/: main.cpp
2.014/source/: main.cpp
2.015/source/: main.cpp
2.015/tests/: test_main.cpp
2.016/source/: main.cpp
2.016/tests/: test_main.cpp
2.017/source/: main.cpp
2.018/source/: main.cpp
2.1/src/: main.cpp
2.1/tests/: tests.cpp  tests.py
3.007/source/: main.cpp
3.007/tests/: test_functional.py
BST1/source/: main.cpp
BST2/source/: main.cpp
BST3/source/: main.cpp
bellman_ford/source/: main.cpp
bucket_sort/: CMakeLists.txt
bucket_sort/tests/: test_functional.py
counting_sort/source/: main.cpp
counting_sort/tests/: test_main.cpp
daleka_droga/source/: main.cpp
default/: main.cpp  makefile
default/src/: main.cpp
default/tests/: tests.py
default_cmake/: Makefile
default_cmake/source/: CMakeLists.txt  main.cpp
default_cmake/tests/: CMakeLists.txt  test_functional.py  test_main.cpp
euler/source/: main.cpp
exam1/src/: main.cpp
exam2/src/: main.cpp
exam3/src/: main.cpp
heap_sort/source/: main.cpp
heap_sort/tests/: test_main.cpp
hyperloop/source/: main.cpp
insertion_sort/source/: main.cpp
insertion_sort/tests/: test_main.cpp
jak_szybko/source/: main.cpp
komisja_sledcza/source/: main.cpp
labirynt/source/: main.cpp
lin_hyperloop_easy/source/: main.cpp
merge_sort/source/: main.cpp
merge_sort/tests/: test_main.cpp
mnemo_olimpic/source/: main.cpp
phone_book/source/: main.cpp
quick_sort/source/: main.cpp
quick_sort/tests/: test_main.cpp
radix_sort/source/: main.cpp
radix_sort/tests/: test_main.cpp
teensy/src/: main.cpp
teensy/tests/: tests.cpp
tomuslib/: CMakeLists.txt  makefile
tomuslib/inc/: fibonacciGenerator.h  myMath.h
tomuslib/src/: fibonacciGenerator.cpp  myMath.cpp
tomuslib/tests/: test_fibonacciGenerator.cpp  test_myMath.cpp  test_tests.cpp  test_tests_runner
unitylib/: CMakeLists.txt  unity.c  unity.h  unity_internals.h
